--- a/UIAppliction_merge_2/MCSP-A2-project-login/app/src/main/res/values-en/strings.xml
+++ b/UIAppliction_merge_2/MCSP-A2-project-login/app/src/main/res/values-en/strings.xml
@@ -2,8 +2,8 @@
     <string name="app_name">OrderFoodOL</string>
     <string name="login_text">Login</string>
     <string name="login_btn_text">GO！</string>
-    <string name="login_username_hint">Please enter your username or mobile phone number</string>
-    <string name="login_password_hint">Please enter your password</string>
+    <string name="login_username_hint">Please enter your username</string>
+    <string name="login_password_hint">Please enter your phone number</string>
     <string name="signup_username_hint">Please enter your username</string>
     <string name="signup_phoneNumber_hint" >Please input your mobile phone number (China)</string>
     <string name="signup_text" >注册</string>
